# fastapi_learn

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/api/: demo.py
app/schemas/: demo.py
config/core/: exception_handlers.py  exceptions.py  settings.py
config/dependencies/: auth.py
config/middlewares/: process_time_middleware.py
